--- a/styles/style.css
+++ b/styles/style.css
@@ -17,15 +17,25 @@ body {
 main {
     background-color: #076324;
     width: 100vw;
-    height: 90vh;
+    height: 94vh;
 }
 
 h1{
     font-weight: 500;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: #ffffff;
     text-transform: uppercase;
     padding: 5px;
+    margin: 0;
+    text-align: center;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    padding: 20px;
     margin: 0;
     text-align: center;
 }
@@ -69,6 +79,7 @@ img {
     cursor: pointer;
     text-transform: uppercase;
     width: 80px;
+    opacity: 0.5;
 }
 
 .topBoard {
@@ -87,7 +98,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 15px;
+    padding: 15px 0;
 }
 
 .title {
@@ -100,15 +111,20 @@ img {
 
 .playingArea {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.winner {
+    padding: 20px 0;
+    opacity: 0.5;
+}
+
 footer {
-    background: black;
+    background: #000000;
     width: 100vw;
-    height: 75px;
+    height: 50px;
 }
 
 .footnotes {
@@ -116,13 +132,13 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 75px;
+    height: 50px;
 }
 
 a {
     font-family: 'Kiwi Maru', serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 0.7rem;
     color: #ffffff;
     text-align: center;
 }
