--- a/styles/style.css
+++ b/styles/style.css
@@ -116,9 +116,43 @@ img {
     align-items: center;
 }
 
-.winner {
-    padding: 20px 0;
-    opacity: 0.5;
+.tie {
+    opacity: 0.2;
+}
+
+.players {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.player1,
+.player2,
+.player3 {
+    width: calc(100% / 3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.winner1,
+.winner2,
+.winner3 {
+    padding: 10px 0;
+    opacity: 0.2;
+}
+
+.player1Cards,
+.player2Cards,
+.player3Cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
