--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 15px 0;
+    padding: 15px 15px;
 }
 
 .title {
@@ -117,7 +117,7 @@ img {
 }
 
 .tie {
-    opacity: 0.2;
+    opacity: 0;
 }
 
 .players {
@@ -132,7 +132,8 @@ img {
 .player1,
 .player2,
 .player3 {
-    width: calc(100% / 3);
+    width: 340px;
+    padding: 10px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -143,7 +144,7 @@ img {
 .winner2,
 .winner3 {
     padding: 10px 0;
-    opacity: 0.2;
+    opacity: 0;
 }
 
 .player1Cards,
@@ -158,7 +159,7 @@ img {
 footer {
     background: #000000;
     width: 100vw;
-    height: 50px;
+    height: 6vh;
 }
 
 .footnotes {
@@ -175,4 +176,20 @@ a {
     font-size: 0.7rem;
     color: #ffffff;
     text-align: center;
+}
+
+/* media queries */
+
+@media (max-width: 1020px) {
+    
+    main {
+        height: 120vh;
+    }
+}
+
+@media (max-width: 680px) {
+    
+    main {
+        height: 160vh;
+    }
 }
