--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body {
 main {
     background-color: #076324;
     width: 100vw;
-    height: 94vh;
+    height: 650px;
 }
 
 h1{
@@ -35,7 +35,7 @@ h2 {
     font-size: 2.5rem;
     color: #ffffff;
     text-transform: uppercase;
-    padding: 20px;
+    padding: 10px 20px;
     margin: 0;
     text-align: center;
 }
@@ -159,7 +159,7 @@ img {
 footer {
     background: #000000;
     width: 100vw;
-    height: 6vh;
+    height: 50px;
 }
 
 .footnotes {
@@ -183,13 +183,20 @@ a {
 @media (max-width: 1020px) {
     
     main {
-        height: 120vh;
+        height: 1000px;
+    }
+}
+
+@media (max-width: 810px) {
+    
+    main {
+        height: 1100px;
     }
 }
 
 @media (max-width: 680px) {
     
     main {
-        height: 160vh;
+        height: 1500px;
     }
 }
